--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 python:
   - "2.6"
   - "2.7"
+  - "3.3"
+  - "3.4"
   - "pypy"
 
 notifications:
@@ -18,7 +20,7 @@ before_install:
 
 install:
     - python setup.py develop
-    - pip install --use-mirrors samsa[test]
+    - pip install samsa[test]
 
 env: ZOOKEEPER_PATH=/usr/share/java KAFKA_PATH=/usr/local/kafka KAFKA_START_TIMEOUT=30
 
